<?xml version="1.0"?>
<package format="3">
  <name>rospital_hardware_interface</name>
  <version>0.0.1</version>
  <description>Hardware interface for Rospital using Arduino with ros2_control</description>
  <maintainer email="ioko@ioko.eu">Ioannis Kokkoris</maintainer>
  <license>MIT</license>

  <!-- Công cụ build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Các thư viện cần thiết khi biên dịch -->
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Xuất Plugin -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>