<?xml version="1.0"?>
<package format="3">
  <name>rospital_neupan</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for NeuPAN local planner (Rospital integration)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
